src/style.css
body {
    font-family: sans-serif;
    background-color: darkblue;
}

#root {
    display: grid;
    grid-template-rows: auto;
    gap: 4rem;
}

#grid {
    display: flex;
    justify-content: space-evenly;
}

.wordcollection {
    display: grid;
    grid-template-rows: auto;
    gap: 1rem;
}

#finals {
    display: flex;
    justify-content: space-evenly;
}

#finals > .card {
    width: 15rem;
    height: 5rem;
}

.card {
    width: 10rem;
    height: 3rem;
    border: 1px solid black;
    background-color: white;

    position: relative;
    transition: transform 0.8s;
    transform-style: preserve-3d;
    /* color: transparent; */
}

#finals > .card, .card:last-of-type {
    font-size: 2rem;
}

.card.flip {
    transform: rotateY(180deg);
}

.card > .side {
    position: absolute;
    height: 100%;
    width: 100%;
    backface-visibility: hidden;

    display: flex;
    justify-content: center;
    align-items: center;
}

.card > .side.back {
    transform: rotateY(180deg);
}

/* colors */

.wordcollection.yellow > .card, .card.yellow { background-color: yellow; }
.wordcollection.pink > .card, .card.pink { background-color: pink; }
.wordcollection.green > .card, .card.green { background-color: green; }
.wordcollection.red > .card, .card.red { background-color: red; }
.wordcollection.lightblue > .card, .card.lightblue { background-color: lightblue; }
.wordcollection.lightgreen > .card, .card.lightgreen { background-color: lightgreen; }

